k8srequiredprobes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Requires Pods to have readiness and/or liveness probes.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"templates.gatekeeper.sh/v1beta1","kind":"ConstraintTemplate","metadata":{"annotations":{"description":"Requires Pods to have readiness and/or liveness probes."},"labels":{"configmanagement.gke.io/configmanagement":"config-management","k8s-app":"kubernetes-config-management","policycontroller.configmanagement.gke.io":"true"},"name":"k8srequiredprobes","ownerReferences":[{"apiVersion":"configmanagement.gke.io/v1","blockOwnerDeletion":true,"controller":true,"kind":"ConfigManage [...]
  creationTimestamp: "2021-09-01T19:15:23Z"
  generation: 1
  labels:
    configmanagement.gke.io/configmanagement: config-management
    k8s-app: kubernetes-config-management
    policycontroller.configmanagement.gke.io: "true"
  managedFields:
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:configmanagement.gke.io/configmanagement: {}
          f:k8s-app: {}
          f:policycontroller.configmanagement.gke.io: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e1113c3f-44c2-4a94-ad86-55422839f36f"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        .: {}
        f:crd:
          .: {}
          f:spec:
            .: {}
            f:names:
              .: {}
              f:kind: {}
            f:validation:
              .: {}
              f:legacySchema: {}
              f:openAPIV3Schema:
                .: {}
                f:properties: {}
        f:targets: {}
    manager: Go-http-client
    operation: Update
    time: "2021-09-01T19:15:23Z"
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:byPod: {}
        f:created: {}
    manager: gatekeeper
    operation: Update
    time: "2021-09-01T19:17:16Z"
  name: k8srequiredprobes
  ownerReferences:
  - apiVersion: configmanagement.gke.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: ConfigManagement
    name: config-management
    uid: e1113c3f-44c2-4a94-ad86-55422839f36f
  resourceVersion: "5283425"
  uid: 81f6b7ea-67a7-41a4-a517-6be27da66f0f
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredProbes
      validation:
        legacySchema: true
        openAPIV3Schema:
          properties:
            probeTypes:
              items:
                type: string
              type: array
            probes:
              items:
                type: string
              type: array
  targets:
  - rego: |
      package k8srequiredprobes

      probe_type_set = probe_types {
        probe_types := {type | type := input.parameters.probeTypes[_]}
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        probe := input.parameters.probes[_]
        probe_is_missing(container, probe)
        msg := get_violation_message(container, input.review, probe)
      }

      probe_is_missing(ctr, probe) {
        not ctr[probe]
      }

      probe_is_missing(ctr, probe) {
        probe_field_empty(ctr, probe)
      }

      probe_field_empty(ctr, probe) {
        probe_fields := {field | ctr[probe][field]}
        diff_fields := probe_type_set - probe_fields
        count(diff_fields) == count(probe_type_set)
      }

      get_violation_message(container, review, probe) = msg {
        msg := sprintf("Container <%v> in your <%v> <%v> has no <%v>", [container.name, review.kind.kind, review.object.metadata.name, probe])
      }
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-79966db76-g9t4n
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: 81f6b7ea-67a7-41a4-a517-6be27da66f0f
  - id: gatekeeper-controller-manager-78bb8f574f-qthrj
    observedGeneration: 1
    operations:
    - webhook
    templateUID: 81f6b7ea-67a7-41a4-a517-6be27da66f0f
  - id: gatekeeper-mutation-7696499fc9-4xr86
    observedGeneration: 1
    operations:
    - mutation-status
    - webhook
    templateUID: 81f6b7ea-67a7-41a4-a517-6be27da66f0f
  created: true
